...
    <string name="authorText" translatable="false">Lorem ipsum dolor sit amet</string>
    <string name="yearText" translatable="false">2001</string>
    <string name="authors_option">Authors</string>
    <string name="authorPhotoText">Author Photo</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="work_detail">Work details</string>
    <string name="descriptionText" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce luctus ac nunc ut auctor. Maecenas suscipit lorem in lobortis blandit. Mauris placerat, ligula commodo convallis accumsan, nibh libero interdum nunc, vitae iaculis est justo vitae odio. Etiam metus quam, tincidunt ut convallis ut, blandit eu elit. Nullam vitae metus consectetur er
    <string name="favText">Favourite</string>
    <string name="ratingText" translatable="false">4.5/5 (90%)</string>
    <string name="starText">star</string>
    <string name="datesText" translatable="false">September 20, 1948</string>
    <string name="add_fav">Added to favorites</string>
...
